fix oidc api docs
